--- a/style.css
+++ b/style.css
@@ -5,3 +5,35 @@
     position: relative;
     left: 38%;
 }
+
+/* modal CSS */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1; /* sit on top */
+    width: 35%;
+    height: 30%;
+    padding: 50px;
+    background-color: rgb(223, 203, 201);
+}
+
+.close {
+    color: black;
+    float: right;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: green;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#generate {
+    background-color: rgb(176, 207, 236);
+    padding: 5px;
+    border: 2px solid black;
+}
