--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+header h1{
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+}
+
+/* main-page*/
+
 .display-the-fact {
     padding: 25px;
 }
@@ -29,7 +37,7 @@
     position: fixed;
     z-index: 1; /* sit on top */
     width: 35%;
-    height: 30%;
+    height: 35%;
     padding: 50px;
     background-color: rgb(223, 203, 201);
 }
