--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ header h1{
 /* main-page*/
 
 .display-the-fact {
-    padding: 25px;
+    padding: 12px;
 }
 #fun-fact-btn {
     position: relative;
@@ -33,16 +33,21 @@ header h1{
 /* modal CSS */
 
 .modal {
+    bottom: 120px;
     display: none;
     position: fixed;
     z-index: 1; /* sit on top */
-    width: 35%;
-    height: 35%;
+    width: auto;
+    height: auto;
     padding: 50px;
-    background-color: rgb(223, 203, 201);
+    margin-left: 25%;
+    margin-right: 25%;
+    background-color: rgb(212 251 170);
 }
-
-.close {
+#close {
+    position: relative;
+    top: -40px;
+    right: -20px;
     color: black;
     float: right;
     font-size: 25px;
@@ -64,7 +69,42 @@ header h1{
 ol, ul {
     list-style: auto;
 }
+ol {
+    display: block;
+}
 #facts-box {
     position: relative;
-    top: -320px;
+    
+}   
+.display-funfact-box {
+    display: block;
+    text-align: center;
+}
+#animal_type {
+    display: block;
+    border: 1px solid;
+    background: linear-gradient(45deg,palegreen, rgba(101, 187, 101, 0.87), white);
+    margin: auto;
+}
+small {
+    background: linear-gradient(45deg,white ,palegreen, rgb(105, 194, 105), white);
+    
+}
+#num_facts {
+    display: block;
+    border: 1px solid;
+    background: linear-gradient(45deg,palegreen, rgba(101, 187, 101, 0.87), white);
+    margin: auto;
+}
+#fun-fact-form {
+    border: solid 2px #835d1994;
+    padding: 5px;
+    margin-bottom: 15px;
+}
+.display-animal-fact {
+    
+}
+.modal-content {
+    height: fit-content;
+    text-align: justify;
 }
