--- a/style.css
+++ b/style.css
@@ -125,3 +125,30 @@ small {
 
     width: auto; */
 }
+.picture-container {
+    margin-top: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+    align-items: center;
+    max-width: 80%;
+}
+.picture-btn {
+    background: linear-gradient(90deg,palegreen, rgba(101, 187, 101, 0.87), white);
+    margin-top: 50px;
+    padding: 25px;
+    font-weight: 1000;
+    font-size: larger;
+    border: palegreen solid 2px;
+}
+#display {
+    align-items: center;
+    display: block;
+}
+img {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 5px;
+    margin-left: auto;
+    margin-right: auto;
+}
