--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ header h1{
     justify-content: center;
     font-size: 40px;
     font-weight: bold;
+    background-color: whitesmoke;
 }
 #background {
     background-image: url(./assets/leopard.jpeg);
@@ -11,6 +12,7 @@ header h1{
 #history {
     justify-content: center;
     display: grid;
+    background-color: black;
 }
 
 #display {
@@ -23,6 +25,7 @@ header h1{
 nav {
     display: flex;
     justify-content: center;
+    background-color: whitesmoke;
 }
 nav li{
     display: inline;
@@ -72,14 +75,15 @@ nav li{
     padding: 50px;
     margin-left: 33%;
     margin-right: 33%;
-    background-color: rgb(212 251 170);
+    background-color: rgb(0, 0, 0);
+    color: goldenrod;
 }
 
 #close {
     position: relative;
     top: -40px;
     right: -20px;
-    color: black;
+    color: goldenrod;
     float: right;
     font-size: 25px;
     font-weight: bold;
@@ -87,7 +91,7 @@ nav li{
 
 #close:hover,
 #close:focus {
-    color: green;
+    color:rgb(132,28,0);
     text-decoration: none;
     cursor: pointer;
 }
@@ -111,30 +115,31 @@ ol {
 .display-funfact-box {
     display: block;
     text-align: center;
+    background-color: black;
+    color: goldenrod;
 }
 #animal_type {
     display: block;
     border: 1px solid;
-    background: linear-gradient(45deg,palegreen, rgba(101, 187, 101, 0.87), white);
+    background: linear-gradient(45deg,crimson, rgba(132,28,0), crimson);
     margin: auto;
+    color: black;
 }
 small {
-    background: linear-gradient(45deg,white ,palegreen, rgb(105, 194, 105), white);
+    background: linear-gradient(45deg,rgb(132,28,0) ,crimson, rgb(132,28,0), crimson);
     
 }
 #num_facts {
     display: block;
     border: 1px solid;
-    background: linear-gradient(45deg,palegreen, rgba(101, 187, 101, 0.87), white);
+    background: linear-gradient(45deg,crimson, rgb(132,28,0), crimson , rgb(321,28,0));
     margin: auto;
+    color: black;
 }
 #fun-fact-form {
     border: solid 2px #835d1994;
     padding: 5px;
     margin-bottom: 15px;
-}
-.display-animal-fact {
-    
 }
 .modal-content {
     height: fit-content;
@@ -153,12 +158,12 @@ small {
     max-width: 80%;
 }
 .picture-btn {
-    background: linear-gradient(90deg,palegreen, rgba(101, 187, 101, 0.87), white);
+    background: linear-gradient(90deg,crimson, rgba(132, 28, 0), crimson);
     margin-top: 50px;
     padding: 25px;
     font-weight: 1000;
     font-size: larger;
-    border: palegreen solid 2px;
+    border: rgb(0, 0, 0) solid 2px;
 }
 #display {
     align-items: center;
