--- a/style.css
+++ b/style.css
@@ -55,32 +55,11 @@ ol {
 
 /* small text under user input */
 small {
-    background: linear-gradient(45deg,white ,palegreen, rgb(105, 194, 105), white);
+    background: linear-gradient(45deg,rgb(132,28,0) ,crimson, rgb(132, 28, 0), crimson);
     
 }
 
 
-/* .display-the-fact {
-    padding: 12px;
-} */
-
-/* .pet-box-size {
-    max-width: 400px;
-    max-height: 400px;
-    justify-self: center;
-} */
-
-/* 
-.pet-container {
-    max-width: 405px;
-    max-height: 405px;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-}  */
-
-
-/* modal CSS */
 
 .modal {
     bottom: 120px;
@@ -94,7 +73,8 @@ small {
     padding: 50px;
     margin-left: 33%;
     margin-right: 33%;
-    background-color: rgb(212 251 170);
+    background-color: rgb(0, 0, 0);
+    color:goldenrod;
 }
 
 
@@ -102,6 +82,8 @@ small {
 .display-funfact-box {
     display: block;
     text-align: center;
+    background-color: black;
+    color: goldenrod;
 }
 
 
@@ -125,12 +107,12 @@ small {
 
 /* Cat Picture button */
 .picture-btn {
-    background: linear-gradient(90deg,palegreen, rgba(101, 187, 101, 0.87), white);
+    background: linear-gradient(90deg,crimson, rgb(132,28,0), crimson);
     margin-top: 50px;
     padding: 25px;
     font-weight: 1000;
     font-size: larger;
-    border: palegreen solid 2px;
+    border: rgb(0, 0, 0) solid 2px;
 }
 
 /* where the generated picture will display */
@@ -167,15 +149,16 @@ small {
 #num_facts {
     display: block;
     border: 1px solid;
-    background: linear-gradient(45deg,palegreen, rgba(101, 187, 101, 0.87), white);
+    background: linear-gradient(45deg,crimson, rgb(132,28,0), crimson);
     margin: auto;
+    color:black
 }
 
 /* user input for animal type */
 #animal_type {
     display: block;
     border: 1px solid;
-    background: linear-gradient(45deg,palegreen, rgba(101, 187, 101, 0.87), white);
+    background: linear-gradient(45deg,crimson, rgb(132,28,0), crimson);
     margin: auto;
 }
 
